--- a/.config/starship.toml
+++ b/.config/starship.toml
@@ -1,42 +1,72 @@
 # startship
 
+# prompt
+add_newline = true
+format = "$all"
+scan_timeout = 10
+
 [aws]
-symbol = "aws:"
+disabled = true
 format = '[$symbol$profile(\($region\))]($style) '
+symbol = 'aws:'
 
 [battery]
 disabled = true
 
 [character]
 disabled = false
+error_symbol = '[\$](bold red)'
+success_symbol = '[\$](bold green)'
 use_symbol_for_status = true
+vicmd_symbol = '[\$](bold green)'
 
 [cmd_duration]
 disabled = false
-format = "[$duration]($style) "
+format = '[$duration]($style) '
 min_time = 500
 show_milliseconds = true
+style = ''
 
 [directory]
 disabled = false
-format = "[$path]($style)[$read_only]($read_only_style) "
+format = '[$path]($style)[$read_only]($read_only_style) '
+style = 'bold cyan'
 truncate_to_repo = true
 truncation_length = 0
+truncation_symbol = ''
+
+[env_var]
+disabled = true
+variable = "SHELL"
+format = '[$env_value]($style) '
 
 [git_branch]
-format = "[$symbol$branch]($style) "
+format = '[$symbol$branch]($style) '
+style = 'bold purple'
 
 [git_commit]
+disabled = false
 only_detached = false
 tag_disabled = false
-tag_symbol = ""
-disabled = false
+tag_symbol = ''
+style = 'bold dimmed green'
+
+[git_status]
+style = 'bold red'
 
 [hostname]
 disabled = false
-format = "[$hostname]($style) "
+format = '[$hostname]($style) '
 ssh_only = false
-trim_at = "."
+style = 'bold white'
+trim_at = '.'
+
+[jobs]
+disabled = false
+format = '[$symbol$number]($style)'
+style = 'bold blue'
+symbol = '+'
+threshold = 1
 
 [line_break]
 disabled = false
@@ -44,34 +74,43 @@ disabled = false
 [memory_usage]
 disabled = true
 
+[perl]
+disabled = false
+format = '[$symbol($version )]($style) '
+style = 'bold dimmed red'
+symbol = 'pl:'
+
 [python]
 disabled = false
-pyenv_prefix = ""
+format = '[${symbol}${pyenv_prefix}(${version} )(\($virtualenv\))]($style) '
+pyenv_prefix = ''
 pyenv_version_name = false
-scan_for_pyfiles = false
-symbol = ""
+style = 'bold dimmed red'
+symbol = 'py:'
 
 [ruby]
-symbol = ""
+disabled = false
+format = '[$symbol($version )]($style) '
+style = 'bold dimmed red'
+symbol = 'rb:'
+
+[status]
+disabled = false
+format = '[\[$int $common_meaning$signal_name\]]($style) '
 
 [terraform]
-format = "[$symbol$workspace]($style) "
-symbol = "tf:"
+format = '[$symbol$workspace]($style) '
+symbol = 'tf:'
 
 [time]
 disabled = false
-#time_format = "[ %F %T ]"
-time_format = "[ %Y%m%d.%H%M%S ]"
-format = "[$time]($style)"
-style = ""
+format = '[$time]($style) '
+style = 'bold dimmed green'
+time_format = '[%Y%m%d.%H%M%S]'
 
 [username]
 disabled = false
+format = '[$user]($style) '
 show_always = true
-format = "[$user]($style) "
-
-#[custom.foo]
-#command = "echo $!"
-#when = "true"
-#prefix = " foo "
-#disabled = false
+style_root = 'bold red'
+style_user = 'bold green'
